fixed sidenav/topnav layout with overflow

--- a/api/app/static/style.css
+++ b/api/app/static/style.css
@@ -29,39 +29,57 @@ html {
     background-color: #eef0eb;
 }
 
-.main {
-    height: 100%;
+body {
     margin: auto;
     max-width: 1024px;
-    background-color: #f1f4f5;
+    height: 100%;
+    overflow: hidden;
     display: flex;
+    /* enables flex content for its children */
+    box-sizing: border-box;
+    background-color: #f1f4f5;
 }
 
-/* SIDE NAVIGATION BAR */
-.sidenav {
+
+.column {
     height: 100%;
+    /* allows both columns to span the full height of the browser window */
+    display: flex;
+    flex-direction: column;
+    /* stacks the left and right headers above the bottom content */
+}
+
+/* LEFT COLUMN */
+#left {
+    flex-shrink: 0;
+    /* makes sure that content is not cut off in a smaller browser window */
     width: 200px;
-    /* position: fixed; */
+    position: fixed;
     z-index: 1;
     background-color: #2b323a;
-    overflow-x: hidden;
+    height: 100%;
+    overflow: auto;
 }
 
-/* SIDE NAVIGATION BAR */
-.sidenav .header {
-    color: #fff;
+/* LEFT COLUMN HEADER */
+.top-left {
+    flex-shrink: 0;
+    font-size: 32px;
     text-align: center;
     background-color: #ea3200;
     height: 65px;
 }
 
-.sidenav h1 {
+.top-left a {
     margin: auto;
+    color: #fff;
     line-height: 65px;
+    text-decoration: none;
     vertical-align: middle;
 }
 
-.sidenav a {
+
+.bottom a {
     padding: 12px 8px 6px 16px;
     text-decoration: none;
     font-size: 16px;
@@ -71,37 +89,33 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
-.sidenav a:hover {
+.bottom a:hover {
     color: #f1f1f1;
 }
 
 
-/* RIGHT COLUMN */
-.column-right {
-    height: 100%;
-    width: 100%;
-    /* allows both columns to span the full height of the browser window */
-    display: flex;
-    flex-direction: column;
-    /* stacks the left and right headers above the bottom content */
+.bottom {
+    flex-grow: 1;
+    /* ensures that the container will take up the full height of the parent container */
+    overflow-y: auto;
+    /* adds scroll to this container */
 }
 
-/* RIGHT COLUMN HEADER */
-.column-right .header {
+/* RIGHT COLUMN */
+.top-right {
+    padding-left: 200px;
     height: 65px;
     background-color: #fff;
     display: flex;
-    /* margin-left: auto; 
-    margin-right: 0; */
-}
-
-/* RIGHT COLUMN HEADER */
-.column-right .nav{
-    margin-left: auto; 
     margin-right: 0;
 }
 
-.column-right .header a {
+.top-right .nav {
+    margin-left: auto;
+}
+
+/* RIGHT COLUMN HEADER */
+.top-right a {
     margin: 0px 16px 0px 0px;
     line-height: 65px;
     vertical-align: middle;
@@ -111,36 +125,25 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
-.column-right .header a:hover {
+.top-right a:hover {
     color: #ea3200;
 }
 
 /* RIGHT COLUMN BODY */
-.column-right .content {
-
-    /* ensures that the container will take up the full height of the parent container */
-    overflow-y: auto;
-    padding: 0px 10px;
+#right .bottom {
+    padding-left: 200px;
 }
 
-body {
-    height: 100%;
-    /* overflow: hidden; */
-    margin: 0px;
-    /* removes default style */
-    display: flex;
-    /* enables flex content for its children */
-    box-sizing: border-box;
-}
 
 .rounded-box {
     border-radius: 25px;
     background: #fff;
-    padding: 20px; 
+    padding: 20px;
     margin: 20px;
 }
 
-/* miscellaneous */
+
+/* miscellaneous ---------------------------------------*/
 svg {
     width: 24px;
     height: 24px;
@@ -160,3 +163,10 @@ svg {
     display: inline-block;
 }
 
+#triangle-right {
+    width: 0;
+    height: 0;
+    border-top: 33px solid transparent;
+    border-left: 40px solid #ea3200;
+    border-bottom: 33px solid transparent;
+}
